--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -28,3 +28,12 @@ body {
 body {
   font-family: "Roboto Condensed", sans-serif;
 }
+
+.container {
+  background-color: white;
+  width: 450px;
+  height: 100vh;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 140px;
+}
