--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -23,6 +23,10 @@
   font-style: italic;
 }
 
+.new-tweet .counter.counter-error {
+  color: red;
+}
+
 .new-tweet input {
   position: absolute;
   left: 10px;
@@ -31,9 +35,67 @@
 }
 
 .new-tweet textarea {
-  width: 360px;
+  min-width: 360px;
+  max-width: 360px;
   margin-bottom: 35px;
   margin-top: -15px;
   padding-left: 5px;
   padding-top: 5px;
+}
+
+#unknown {
+  background-color: lightgrey;
+  border-radius: 10px;
+  position: relative;
+  padding-left: 2em;
+  padding-right: 2em;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+#unknown .chief {
+  height: 60px;
+  margin-top: 10px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: black;
+  border-radius: 20px;
+  border-style: groove;
+  margin-left: 5px;
+  width: 75px;
+}
+
+#unknown .header {
+  background-color: whitesmoke;
+  border-radius: 10px;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  margin-left: -30px;
+  width: 387px;
+  height: 85px;
+}
+
+.name {
+  margin-left: 90px;
+  padding-top: 1em;
+}
+
+.handle {
+  margin-left: 290px;
+  margin-top: -40px;
+}
+
+.comment-section {
+  background-color: white;
+  /* width: 200px; */
+  margin-right: -32px;
+  margin-left: -32px;
+  height: 100px;
+  margin-top: -20px;
+}
+
+.date {
+  font-size: 10px;
+  margin-left: -30px;
 }
