--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -14,6 +14,17 @@
   padding-left: 4em;
   margin-bottom: 12px;
 }
+.compose-button {
+  position: inherit;
+  right: 0;
+  margin-right: 100px;
+  margin-top: 8px;
+  background-color: ghostwhite;
+  border: black;
+  width: 120px;
+  height: 60px;
+  font-size: larger;
+}
 
 .new-tweet h2 {
   border-bottom: 1px solid #000000;
